--- a/cloudbuild.yml
+++ b/cloudbuild.yml
@@ -20,6 +20,6 @@ steps:
     echo "Deployment Started"
     echo "Deployment done"
 
-logsBucket: 'gs:/gds-log-bucketttttttttt/'
+logsBucket: 'gds-log-bucketttttttttt/'
 options:
   logging: GCS_ONLY
